needs css fixes

--- a/hbdds/src/app/app.component.html
+++ b/hbdds/src/app/app.component.html
@@ -300,7 +300,7 @@
 
 <!-- Toolbar -->
 
-<board></board>
+<app-greet></app-greet>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
