--- a/hbdds/src/styles.scss
+++ b/hbdds/src/styles.scss
@@ -2,3 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body{
+    background: #424242;
+    margin: 0px;	
+    z-index: -1;
+  }
