--- a/hbdds/src/app/greet/greet.component.scss
+++ b/hbdds/src/app/greet/greet.component.scss
@@ -116,3 +116,12 @@ h6{
     font-size: 10vh;
   }
 }
+.flipH {
+    transform: scale(-1, 1);
+    color: #1c87c9;
+    -moz-transform: scale(-1, 1);
+    -webkit-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    -ms-transform: scale(-1, 1);
+    transform: scale(-1, 1);
+  }
