--- a/hbdds/src/app/greet/greet.component.html
+++ b/hbdds/src/app/greet/greet.component.html
@@ -3,11 +3,12 @@
         <div id="box1" class="box" (click)="container_move(); open_card()" >
             <h1>Surprise</h1>
         </div>
-      <div id="box1_back" class="box" (click)="container_move(); open_card()" > <p class="flipH">Hi from Siva </p>
+      <div id="box1_back" class="box " (click)="container_move(); open_card()" > <p class="flipH" >Hi from Siva </p>
     </div>
-            <div id="box2" class="box" (click)="container_move(); ">
+            <div id="box2" class="box" (click)="open_card_2(); ">
                 <h6>Happy Bday<br /> whatever<br/>blah! blah! blah! your Welcome.</h6>
         </div>
+        <div id="box2_back" class="box " (click)="open_card_2()"> <p class="flipH" >Hi from Siva 2 </p></div>
         <div id="box3" class="box" >
             <h6>Happy Bday<br /> whatever<br/>blah! blah! blah! your Welcome.</h6>
     </div>
