--- a/hbdds/src/app/app.component.html
+++ b/hbdds/src/app/app.component.html
@@ -300,10 +300,12 @@
   
 
 </style>
+<app-password123></app-password123>
 
 <!-- Toolbar -->
+<!--<app-password123 [ngClass]="show ? 'hidden' : 'SweDhar'"></app-password123>
 
-<app-greet></app-greet>
+<app-greet [ngClass]="show ? 'SweDhar' : 'hidden'"></app-greet> -->
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
