--- a/hbdds/src/app/password123/password123.component.html
+++ b/hbdds/src/app/password123/password123.component.html
@@ -1,21 +1,15 @@
 <div class="container">
-    <div >
-      <form (submit)="onSubmit()" >
         
   
-        <div class="form-group">
-          <input type="text" class="form-control" id="alterEgo"
-                 name="alterEgo" >
-        </div>
+        
+        <input type="text" id="alterEgo" value = "enter psswd" name="alterEgo" >
   
         
   
-        <button type="submit" class="btn btn-success" >Submit</button>
+        <button type="button" class="btn btn-success" (click)="onSubmit()">Submit</button>
   
        <!-- NOT SHOWN IN DOCS -->
        <!-- - -->
-      </form>
-    </div>
   
     
   </div>
@@ -25,15 +19,7 @@
   
   <!-- ====================================================  -->
 
-  <style>
-    .no-style .ng-valid {
-    border-left: 1px  solid #CCC
-  }
   
-    .no-style .ng-invalid {
-    border-left: 1px  solid #CCC
-  }
-  </style>
  
   
     <!-- EXTRA MATERIAL FOR DOCUMENTATION -->
