--- a/hbdds/src/app/app.component.html
+++ b/hbdds/src/app/app.component.html
@@ -303,9 +303,9 @@
 
 <!--<app-password123></app-password123>-->
 <!-- Toolbar -->
-<app-password123 [ngClass]="show ? 'hidden' : 'SweDhar'"></app-password123>
+<app-password123 id="hidden"></app-password123>
 
-<app-greet [ngClass]="show ? 'SweDhar' : 'hidden'"></app-greet> 
+<app-greet id="SweDhar"></app-greet> 
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
