--- a/hbdds/src/app/password123/password123.component.html
+++ b/hbdds/src/app/password123/password123.component.html
@@ -2,11 +2,11 @@
         
   
         
-        <input type="text" id="alterEgo" value = "enter psswd" name="alterEgo" >
+        <input #box type="text" id="alterEgo" value = "enter psswd" name="alterEgo"  >
   
         
   
-        <button type="button" class="btn btn-success" (click)="onSubmit()">Submit</button>
+        <button type="button" class="btn btn-success" (click)="onSubmit(box.value)">Submit</button>
   
        <!-- NOT SHOWN IN DOCS -->
        <!-- - -->
