--- a/hbdds/src/app/password123/password123.component.html
+++ b/hbdds/src/app/password123/password123.component.html
@@ -2,7 +2,7 @@
         
   
         
-        <input #box type="text" id="alterEgo" value = "enter psswd" name="alterEgo"  >
+        <input #box type="text" id="alterEgo" value = "enter psswd" >
   
         
   
