--- a/hbdds/src/app/password123/password123.component.scss
+++ b/hbdds/src/app/password123/password123.component.scss
@@ -4,14 +4,18 @@
 
 }
 .container input{
-    margin-top: 50vh;
-    margin-left:47%;
+    margin-top: 2vh;
     text-align: center;
     margin-right: auto;
 
 }
 .container button{
     margin-top: 2vh;
-    margin-left:50%;
     margin-right: auto;
+}
+.container h3{
+    margin-top: 48vh;
+    text-align: center;
+    margin-right: auto;
+
 }
