--- a/hbdds/src/app/password123/password123.component.html
+++ b/hbdds/src/app/password123/password123.component.html
@@ -1,16 +1,19 @@
 <div class="container">
+    <div class="row">
+        <h3 class="text-success text-center ml-auto mr-auto">Enter Password</h3>
+        </div>
+    <div class=form>
+        <div class="row">
+        <input #box type="text" id="alterEgo"   class="btn btn-outline-danger center ml-auto mr-auto text-center">
+        </div>
         
-  
-        
-        <input #box type="text" id="alterEgo" value = "enter psswd" >
-  
-        
-  
-        <button type="button" class="btn btn-success" (click)="onSubmit(box.value)">Submit</button>
+        <div class="row">
+        <button type="button" class="btn btn-success  ml-auto mr-auto center" (click)="onSubmit(box.value)">Submit</button>4
+    </div>
   
        <!-- NOT SHOWN IN DOCS -->
        <!-- - -->
-  
+  </div>
     
   </div>
   
