--- a/hbdds/src/styles.scss
+++ b/hbdds/src/styles.scss
@@ -3,7 +3,9 @@
 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 body{
-    background: #424242;
+    background: #424242 !important;
     margin: 0px;	
     z-index: -1;
   }
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
