--- a/hbdds/src/app/greet/greet.component.scss
+++ b/hbdds/src/app/greet/greet.component.scss
@@ -12,8 +12,8 @@
     transform: translateX(-50%);
   }	
 #container, #shell{
-  width: 27vw !important;
-	height: 40.468384074941454vw;
+  width: 63.38281250000001vh ;
+	height: 95vh;
 	display: block;
 	position: relative;
 	z-index: 100;
@@ -118,8 +118,8 @@ h6{
 
 @media screen and (max-width: 1000px) {
   #container, #shell{
-    width: 70vw;
-    max-height: 104.91803278688523vw;
+    //width: 70vw;
+    //max-height: 104.91803278688523vw;
     top: 10%;
   }
   h1{
