A sample - not so likely image

--- a/hbdds/src/app/greet/greet.component.scss
+++ b/hbdds/src/app/greet/greet.component.scss
@@ -115,7 +115,12 @@ h6{
 	user-select: none;
   font-size: 3vh;
 }	
-
+.ishu{
+  margin-right: 6vh;
+  margin-left: -15px;
+  margin-top: 13vh;
+  margin-left: 4vh;
+}
 @media screen and (max-width: 1000px) {
   #container, #shell{
     //width: 70vw;
