--- a/hbdds/src/app/greet/greet.component.html
+++ b/hbdds/src/app/greet/greet.component.html
@@ -19,7 +19,7 @@
         </div>
         <div id="box2_back" class="box" (click)="open_card_2(2)"> <div class="container"> 
             <div class="row contain flipH" >
-            <h6>Happy Bday</h6>
+                <img class="box-image" src="../../assets/img/2024/swe/ice.jpg" width="100%" height="100%"> 
             </div>
             </div>
         </div>
