--- a/hbdds/src/app/greet/greet.component.html
+++ b/hbdds/src/app/greet/greet.component.html
@@ -3,33 +3,10 @@
         <div id="box1" class="box" (click)="container_move(); " >
             <h1>Surprise</h1>
         </div>
-      <div id="box1_back" class="box" (click)="container_move(); " > <div class="container"> 
-        <div class="row contain flipH" >
-        <h6>Happy Bday</h6>
-        </div>
-        </div>
+        <div id="box1_back" class="box" (click)="container_move(); " ></div>
+        <div id="box2" class="box" (click)="open_card_2(2); "></div>
+        <div id="box2_back" class="box" (click)="open_card_2(2)"> </div>
+        <div id="box3" class="box" (click)="open_card_2(3)"></div>
     </div>
-            <div id="box2" class="box" (click)="open_card_2(2); ">
-                <div class="container"> 
-                <div class="row contain ishu" >
-                <img class="box-image" src="../../assets/img/2024/dharu/ice.jpg" width="100%" height="100%"> 
-                <!--<h6>Happy Bday<br /> whatever<br/>blah! blah! blah! your Welcome.</h6>-->
-                </div>
-                </div>
-        </div>
-        <div id="box2_back" class="box" (click)="open_card_2(2)"> <div class="container"> 
-            <div class="row contain flipH" >
-                <img class="box-image" src="../../assets/img/2024/swe/ice.jpg" width="100%" height="100%"> 
-            </div>
-            </div>
-        </div>
-        <div id="box3" class="box" >
-            <div class="container"> 
-                <div class="row contain" >
-                <h6>Happy Bday<br /> whatever<br/>blah! blah! blah! your Welcome.</h6>
-                </div>
-                </div>
-    </div>
-    </div>
-    </div>
+</div>
 
