--- a/hbdds/src/app/greet/greet.component.scss
+++ b/hbdds/src/app/greet/greet.component.scss
@@ -1,18 +1,6 @@
 
-  p{
-    color: #888;
-    font-family: Arial;
-    font-size: 120%;
-    font-weight: lighter;
-    letter-spacing: 1px;
-    position: absolute;
-    left: 50%;
-    margin: 10px 0px;
-    top: 0px;
-    transform: translateX(-50%);
-  }	
 #container, #shell{
-  width: 63.38281250000001vh ;
+  width: 63vh ;
 	height: 95vh;
 	display: block;
 	position: relative;
@@ -22,7 +10,7 @@
 }
 #container{
 	width: 100%;
-	transform: rotateX(70deg);
+	//transform: rotateX(70deg);
   transform-style: preserve-3d;
   transition: all 1s ease;
   -webkit-transition: all 1s ease;
@@ -30,7 +18,7 @@
 #shell{
 	left: 50%;
 	perspective: 1400px;
-	transform: translateX(-50%);	
+	//transform: translateX(-50%);	
 	transition: all .2s ease;
   -webkit-transition: all .6s ease;		
 }
@@ -49,41 +37,161 @@
 div#box1{
   background: url(https://s-media-cache-ak0.pinimg.com/736x/f0/36/f5/f036f5db887f99c0e2f1c0b7aac90f22.jpg) !important;
   background-size: 100% 100%;	
-  transform: rotate3d(0, 1, 0, 0deg);
+  //transform: rotate3d(0, 1, 0, 0deg);
   -webkit-backface-visibility: hidden;
   z-index: 100;
 }
 
 div#box1_back{
-  background:url(../../assets/img/2024_/swe/raees.jpg) center no-repeat fixed;
+  background:url(../../assets/img/2024_/dharu/bavs.jpg) center no-repeat fixed;
   background-size: cover;
-  transform: rotate3d(0, 1, 0, 0deg);
-  z-index: 0;
+  //transform: rotate3d(0, 1, 0, 0deg);
+  z-index: 1;
 }
-div#box2_back{
-    
-    transform: rotate3d(0, 1, 0, 0deg);
-    z-index: 10;
-  }
-.card.flipped {
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-  }
-
 div#box2{
-  background:url(../../assets/img/2024_/dharu/ragavi.jpg) center no-repeat fixed;
+  background:url(../../assets/img/2024_/dharu/bavs.jpg) center no-repeat fixed;
   background-size: cover;
-  transform: rotate3d(0, 1, 0, 0deg);
+  //transform: rotate3d(0, 1, 0, 0deg);
   -webkit-backface-visibility: hidden;
   z-index: 90;
 }
-div#box3{
-    transform: rotate3d(0, 1, 0, 0deg);
+div#box2_back{
+    background:url(../../assets/img/2024_/swe/ice.jpg) center no-repeat fixed;
+    background-size: cover;
+   // transform: rotate3d(0, 1, 0, 0deg);
+    z-index: 2;
+  }
+
+  div#box3{
+    background:url(../../assets/img/2024_/swe/ice_2.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
     -webkit-backface-visibility: hidden;
     z-index: 80;
   }
+  div#box3_back{
+    background:url(../../assets/img/2024_/dharu/ice.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    z-index: 3;
+  }
+  div#box4{
+    background:url(../../assets/img/2024_/dharu/ice_2.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    -webkit-backface-visibility: hidden;
+    z-index: 75;
+  }
+  
+  div#box4_back{
+    background:url(../../assets/img/2024_/swe/goku.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    z-index: 4;
+  }
+  div#box5{
+    background:url(../../assets/img/2024_/dharu/goku.jpg) center no-repeat fixed;
+    background-size: cover;
+
+    //transform: rotate3d(0, 1, 0, 0deg);
+    -webkit-backface-visibility: hidden;
+    z-index: 70;
+  }
+  
+  div#box5_back{
+    background:url(../../assets/img/2024_/swe/joshah.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    z-index: 5;
+  }
+  div#box6{
+    background:url(../../assets/img/2024_/dharu/joshah.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    -webkit-backface-visibility: hidden;
+    z-index: 65;
+  }
+  
+  div#box6_back{
+    background:url(../../assets/img/2024_/swe/neha.jpg) center no-repeat fixed;
+    background-size: cover;
+   // transform: rotate3d(0, 1, 0, 0deg);
+    z-index: 6;
+  }
+  div#box7{
+    background:url(../../assets/img/2024_/dharu/neha.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    -webkit-backface-visibility: hidden;
+    z-index: 60;
+  }
+  
+  div#box7_back{
+    background:url(../../assets/img/2024_/swe/raees.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    z-index: 7;
+  }
+  div#box8{
+    background:url(../../assets/img/2024_/dharu/raees.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    -webkit-backface-visibility: hidden;
+    z-index: 55;
+  }
+  
+  div#box8_back{
+    background:url(../../assets/img/2024_/swe/ragavi.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    z-index: 8;
+  }
+  div#box9{
+    background:url(../../assets/img/2024_/dharu/ragavi.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    -webkit-backface-visibility: hidden;
+    z-index: 50;
+  }
+  
+  div#box9_back{
+    background:url(../../assets/img/2024_/swe/raj.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    z-index: 9;
+  }
+  div#box10{
+    background:url(../../assets/img/2024_/dharu/raj.jpg) center no-repeat fixed;
+    background-size: cover;	
+    //transform: rotate3d(0, 1, 0, 0deg);
+    -webkit-backface-visibility: hidden;
+    z-index: 49;
+  }
+  
+  div#box10_back{
+    background:url(../../assets/img/2024_/swe/shree.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    z-index: 10;
+  }
+  div#box11{
+    background:url(../../assets/img/2024_/dharu/shree.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    -webkit-backface-visibility: hidden;
+    z-index: 48;
+  }
+  
+  div#box11_back{
+    background:url(../../assets/img/2024_/sk.jpg) center no-repeat fixed;
+    background-size: cover;
+    //transform: rotate3d(0, 1, 0, 0deg);
+    z-index: 11;
+  }
+
+
+
+
 h1{
   font-family: 'Satisfy', cursive;
   font-size: 5em;
@@ -132,12 +240,3 @@ h6{
     font-size: 10vh;
   }
 }
-.flipH {
-    transform: scale(-1, 1);
-    color: #1c87c9;
-    -moz-transform: scale(-1, 1);
-    -webkit-transform: scale(-1, 1);
-    -o-transform: scale(-1, 1);
-    -ms-transform: scale(-1, 1);
-    transform: scale(-1, 1);
-  }
