--- a/hbdds/src/app/greet/greet.component.html
+++ b/hbdds/src/app/greet/greet.component.html
@@ -4,26 +4,26 @@
             <h1>Surprise</h1>
         </div>
         <div id="box1_back" class="box" (click)="container_move(); " ></div>
-        <div id="box2" class="box" (click)="open_card_2(2); "></div>
-        <div id="box2_back" class="box" (click)="open_card_2(2)"> </div>
-        <div id="box3" class="box" (click)="open_card_2(3)"></div>
-        <div id="box3_back" class="box" (click)="open_card_2(3)"> </div>
-        <div id="box4" class="box" (click)="open_card_2(4)"></div>
-        <div id="box4_back" class="box" (click)="open_card_2(4)"> </div>
-        <div id="box5" class="box" (click)="open_card_2(5)"></div>
-        <div id="box5_back" class="box" (click)="open_card_2(5)"> </div>
-        <div id="box6" class="box" (click)="open_card_2(6)"></div>
-        <div id="box6_back" class="box" (click)="open_card_2(6)"> </div>
-        <div id="box7" class="box" (click)="open_card_2(7)"></div>
-        <div id="box7_back" class="box" (click)="open_card_2(7)"> </div>
-        <div id="box8" class="box" (click)="open_card_2(8)"></div>
-        <div id="box8_back" class="box" (click)="open_card_2(8)"> </div>
-        <div id="box9" class="box" (click)="open_card_2(9)"></div>
-        <div id="box9_back" class="box" (click)="open_card_2(9)"> </div>
-        <div id="box10" class="box" (click)="open_card_2(10)"></div>
-        <div id="box10_back" class="box" (click)="open_card_2(10)"> </div>
-        <div id="box11" class="box" (click)="open_card_2(11)"></div>
-        <div id="box11_back" class="box" (click)="open_card_2(11)"> </div>
+        <div id="box2" class="box" (click)="open_card_2_f(2); "></div>
+        <div id="box2_back" class="box" (click)="open_card_2_r(2)"> </div>
+        <div id="box3" class="box" (click)="open_card_2_f(3)"></div>
+        <div id="box3_back" class="box" (click)="open_card_2_r(3)"> </div>
+        <div id="box4" class="box" (click)="open_card_2_f(4)"></div>
+        <div id="box4_back" class="box" (click)="open_card_2_r(4)"> </div>
+        <div id="box5" class="box" (click)="open_card_2_f(5)"></div>
+        <div id="box5_back" class="box" (click)="open_card_2_r(5)"> </div>
+        <div id="box6" class="box" (click)="open_card_2_f(6)"></div>
+        <div id="box6_back" class="box" (click)="open_card_2_r(6)"> </div>
+        <div id="box7" class="box" (click)="open_card_2_f(7)"></div>
+        <div id="box7_back" class="box" (click)="open_card_2_r(7)"> </div>
+        <div id="box8" class="box" (click)="open_card_2_f(8)"></div>
+        <div id="box8_back" class="box" (click)="open_card_2_r(8)"> </div>
+        <div id="box9" class="box" (click)="open_card_2_f(9)"></div>
+        <div id="box9_back" class="box" (click)="open_card_2_r(9)"> </div>
+        <div id="box10" class="box" (click)="open_card_2_f(10)"></div>
+        <div id="box10_back" class="box" (click)="open_card_2_r(10)"> </div>
+        <div id="box11" class="box" (click)="open_card_2_f(11)"></div>
+        <div id="box11_back" class="box" (click)="open_card_2_r(11)"> </div>
     </div>
 </div>
 
