--- a/hbdds/src/app/greet/greet.component.html
+++ b/hbdds/src/app/greet/greet.component.html
@@ -3,7 +3,7 @@
         <div id="box1" class="box" (click)="container_move(); " >
             <h1>Surprise</h1>
         </div>
-        <div id="box1_back" class="box" (click)="container_move(); " ></div>
+        <div id="box1_back" class="box" (click)="move_1() " ></div>
         <div id="box2" class="box" (click)="open_card_2_f(2); "></div>
         <div id="box2_back" class="box" (click)="open_card_2_f(2)"> </div>
         <div id="box3" class="box" (click)="open_card_2_f(3)"></div>
