--- a/hbdds/src/app/greet/greet.component.scss
+++ b/hbdds/src/app/greet/greet.component.scss
@@ -232,14 +232,16 @@ h6{
   margin-top: 13vh;
   margin-left: 4vh;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 768px) {
   #container, #shell{
     //width: 70vw;
     //max-height: 104.91803278688523vw;
+    width: 30vh;
+    height: 45vh;
     top: 10%;
   }
   h1{
-    font-size: 10vh;
+    font-size: 5vh;
   }
 }
 .flipH {
