--- a/hbdds/src/app/greet/greet.component.html
+++ b/hbdds/src/app/greet/greet.component.html
@@ -3,27 +3,70 @@
         <div id="box1" class="box" (click)="container_move(); " >
             <h1>Surprise</h1>
         </div>
-        <div id="box1_back" class="box" (click)="move_1() " ></div>
-        <div id="box2" class="box" (click)="open_card_2_f(2); "></div>
-        <div id="box2_back" class="box" (click)="open_card_2_f(2)"> </div>
-        <div id="box3" class="box" (click)="open_card_2_f(3)"></div>
-        <div id="box3_back" class="box" (click)="open_card_2_f(3)"> </div>
-        <div id="box4" class="box" (click)="open_card_2_f(4)"></div>
-        <div id="box4_back" class="box" (click)="open_card_2_f(4)"> </div>
-        <div id="box5" class="box" (click)="open_card_2_f(5)"></div>
-        <div id="box5_back" class="box" (click)="open_card_2_f(5)"> </div>
-        <div id="box6" class="box" (click)="open_card_2_f(6)"></div>
-        <div id="box6_back" class="box" (click)="open_card_2_f(6)"> </div>
-        <div id="box7" class="box" (click)="open_card_2_f(7)"></div>
-        <div id="box7_back" class="box" (click)="open_card_2_f(7)"> </div>
-        <div id="box8" class="box" (click)="open_card_2_f(8)"></div>
-        <div id="box8_back" class="box" (click)="open_card_2_f(8)"> </div>
-        <div id="box9" class="box" (click)="open_card_2_f(9)"></div>
-        <div id="box9_back" class="box" (click)="open_card_2_f(9)"> </div>
-        <div id="box10" class="box" (click)="open_card_2_f(10)"></div>
-        <div id="box10_back" class="box" (click)="open_card_2_f(10)"> </div>
-        <div id="box11" class="box" (click)="open_card_2_f(11)"></div>
-        <div id="box11_back" class="box" (click)="open_card_2_f(11)"> </div>
+        <div id="box1_back" class="box" (click)="move_1() " >
+            <img src="../../assets/img/2024_/swe/bavsS.jpg" width="100%" height="100%">
+        </div>
+        
+        <div id="box2" class="box" (click)="open_card_2_f(2); ">
+            <img src="../../assets/img/2024_/dharu/bavs.jpg" width="100%" height="100%">
+        </div>
+        <div id="box2_back" class="box" (click)="open_card_2_f(2)"> 
+            <img src="../../assets/img/2024_/swe/gokuS.jpg" width="100%" height="100%">
+        </div>
+        <div id="box3" class="box" (click)="open_card_2_f(3)">
+            <img src="../../assets/img/2024_/dharu/goku.jpg" width="100%" height="100%">
+        </div>
+        <div id="box3_back" class="box" (click)="open_card_2_f(3)"> 
+            <img src="../../assets/img/2024_/swe/iceS.jpg" width="100%" height="100%">
+        </div>
+        <div id="box4" class="box" (click)="open_card_2_f(4)">
+            <img src="../../assets/img/2024_/swe/ice_2S.jpg" width="100%" height="100%">
+        </div>
+        <div id="box4_back" class="box" (click)="open_card_2_f(4)"> 
+            <img src="../../assets/img/2024_/dharu/ice.jpg" width="100%" height="100%">
+        </div>
+        <div id="box5" class="box" (click)="open_card_2_f(5)">
+            <img src="../../assets/img/2024_/dharu/ice_2.jpg" width="100%" height="100%">
+        </div>
+        <div id="box5_back" class="box" (click)="open_card_2_f(5)"> 
+            <img src="../../assets/img/2024_/swe/joshahS.jpg" width="100%" height="100%">
+        </div>
+        <div id="box6" class="box" (click)="open_card_2_f(6)">
+            <img src="../../assets/img/2024_/dharu/joshah.jpg" width="100%" height="100%">
+        </div>
+        <div id="box6_back" class="box" (click)="open_card_2_f(6)"> 
+            <img src="../../assets/img/2024_/swe/nehaS.jpg" width="100%" height="100%">
+        </div>
+        <div id="box7" class="box" (click)="open_card_2_f(7)">
+            <img src="../../assets/img/2024_/dharu/neha.jpg" width="100%" height="100%">
+        </div>
+        <div id="box7_back" class="box" (click)="open_card_2_f(7)"> 
+            <img src="../../assets/img/2024_/swe/raeesS.jpg" width="100%" height="100%">
+        </div>
+        <div id="box8" class="box" (click)="open_card_2_f(8)">
+            <img src="../../assets/img/2024_/dharu/raees.jpg" width="100%" height="100%">
+        </div>
+        <div id="box8_back" class="box" (click)="open_card_2_f(8)"> 
+            <img src="../../assets/img/2024_/swe/ragaviS.jpg" width="100%" height="100%">
+        </div>
+        <div id="box9" class="box" (click)="open_card_2_f(9)">
+            <img src="../../assets/img/2024_/dharu/ragavi.jpg" width="100%" height="100%">
+        </div>
+        <div id="box9_back" class="box" (click)="open_card_2_f(9)"> 
+            <img src="../../assets/img/2024_/swe/rajS.jpg" width="100%" height="100%">
+        </div>
+        <div id="box10" class="box" (click)="open_card_2_f(10)">
+            <img src="../../assets/img/2024_/dharu/raj.jpg" width="100%" height="100%">
+        </div>
+        <div id="box10_back" class="box" (click)="open_card_2_f(10)"> 
+            <img src="../../assets/img/2024_/swe/shreeS.jpg" width="100%" height="100%">
+        </div>
+        <div id="box11" class="box" (click)="open_card_2_f(11)">
+            <img src="../../assets/img/2024_/dharu/shree.jpg" width="100%" height="100%">
+        </div>
+        <div id="box11_back" class="box" (click)="open_card_2_f(11)"> 
+            <img src="../../assets/img/2024_/sk.jpg" width="100%" height="100%">
+        </div>
     </div>
 </div>
 
