--- a/hbdds/src/app/greet/greet.component.scss
+++ b/hbdds/src/app/greet/greet.component.scss
@@ -55,139 +55,139 @@ div#box1{
 }
 
 div#box1_back{
-  background:url(../../assets/img/2024_/swe/bavsS.jpg) center no-repeat fixed;
-  background-size: cover;
+ // background:url(../../assets/img/2024_/swe/bavsS.jpg) center no-repeat fixed;
+  //background-size: cover;
   transform: rotate3d(0, 1, 0, 0deg);
   z-index: 11;
 }
 
 div#box2{
-  background:url(../../assets/img/2024_/dharu/bavs.jpg) center no-repeat fixed;
-  background-size: cover;
+ // background:url(../../assets/img/2024_/dharu/bavs.jpg) center no-repeat fixed;
+  //background-size: cover;
   transform: rotate3d(0, 1, 0, 0deg);
   -webkit-backface-visibility: hidden;
   z-index: 190;
 }
 div#box2_back{
-  background:url(../../assets/img/2024_/swe/gokuS.jpg) center no-repeat fixed;
-  background-size: cover;
+ // background:url(../../assets/img/2024_/swe/gokuS.jpg) center no-repeat fixed;
+  //background-size: cover;
   transform: rotate3d(0, 1, 0, 0deg);
   z-index: 10;
   }
   div#box3{
-    background:url(../../assets/img/2024_/dharu/goku.jpg) center no-repeat fixed;
-    background-size: cover;
+   // background:url(../../assets/img/2024_/dharu/goku.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     -webkit-backface-visibility: hidden;
     z-index: 180;
   }
 div#box3_back{
-  background:url(../../assets/img/2024_/swe/iceS.jpg) center no-repeat fixed;
-  background-size: cover;
+ // background:url(../../assets/img/2024_/swe/iceS.jpg) center no-repeat fixed;
+  //background-size: cover;
   transform: rotate3d(0, 1, 0, 0deg);
   z-index: 9;
   }
   div#box4{
-    background:url(../../assets/img/2024_/swe/ice_2S.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/swe/ice_2S.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     -webkit-backface-visibility: hidden;
     z-index: 170;
   }
   div#box4_back{
-    background:url(../../assets/img/2024_/dharu/ice.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/dharu/ice.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     z-index: 8;
     }
   div#box5{
-    background:url(../../assets/img/2024_/dharu/ice_2.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/dharu/ice_2.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     -webkit-backface-visibility: hidden;
     z-index: 160;
   }
   div#box5_back{
-    background:url(../../assets/img/2024_/swe/joshahS.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/swe/joshahS.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     z-index: 7;
     }
   div#box6{
-    background:url(../../assets/img/2024_/dharu/joshah.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/dharu/joshah.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     -webkit-backface-visibility: hidden;
     z-index: 150;
   }
   div#box6_back{
     background:url(../../assets/img/2024_/swe/nehaS.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     z-index: 6;
   }
   div#box7{
-    background:url(../../assets/img/2024_/dharu/neha.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/dharu/neha.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     -webkit-backface-visibility: hidden;
     z-index: 140;
   }
   div#box7_back{
-    background:url(../../assets/img/2024_/swe/raeesS.jpg) center no-repeat fixed;
-    background-size: cover;
+   // background:url(../../assets/img/2024_/swe/raeesS.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     z-index: 5;
   }
   div#box8{
-    background:url(../../assets/img/2024_/dharu/raees.jpg) center no-repeat fixed;
-    background-size: cover;
+   // background:url(../../assets/img/2024_/dharu/raees.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     -webkit-backface-visibility: hidden;
     z-index: 130;
   }
   div#box8_back{
-    background:url(../../assets/img/2024_/swe/ragaviS.jpg) center no-repeat fixed;
-    background-size: cover;
+   // background:url(../../assets/img/2024_/swe/ragaviS.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     z-index: 4;
   }
   div#box9{
-    background:url(../../assets/img/2024_/dharu/ragavi.jpg) center no-repeat fixed;
-    background-size: cover;
+   // background:url(../../assets/img/2024_/dharu/ragavi.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     -webkit-backface-visibility: hidden;
     z-index: 120;
   }
   div#box9_back{
-    background:url(../../assets/img/2024_/swe/rajS.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/swe/rajS.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     z-index: 3;
   }
   div#box10{
-    background:url(../../assets/img/2024_/dharu/raj.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/dharu/raj.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     -webkit-backface-visibility: hidden;
     z-index: 110;
   }
   div#box10_back{
-    background:url(../../assets/img/2024_/swe/shreeS.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/swe/shreeS.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     z-index: 2;
   }
   div#box11{
-    background:url(../../assets/img/2024_/dharu/shree.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/dharu/shree.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     -webkit-backface-visibility: hidden;
     z-index: 100;
   }
   div#box11_back{
-    background:url(../../assets/img/2024_/sk.jpg) center no-repeat fixed;
-    background-size: cover;
+    //background:url(../../assets/img/2024_/sk.jpg) center no-repeat fixed;
+    //background-size: cover;
     transform: rotate3d(0, 1, 0, 0deg);
     z-index: 1;
   }
